<?xml version="1.0"?>
<package format="2">
  <name>descartes_ikfast</name>
  <version>0.1.0</version>
  <description>The descartes_ikfast package</description>

  <author email="levi.armstrong@swri.org">Levi Armstrong</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>

  <license>Apache 2.0</license>

  <depend>descartes_light</depend>
  <depend>libblas-dev</depend>
  <depend>liblapack-dev</depend>
  <depend>eigen</depend>
  <depend>libconsole-bridge-dev</depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
