<?xml version="1.0"?>
<package format="2">
  <name>descartes_light</name>
  <version>0.0.0</version>
  <description>The descartes_light package</description>

  <maintainer email="jmeyer1292@github.com">Jon Meyer</maintainer>
  <maintainer email="levi.armstrong@swri.edu">Levi Armstrong</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>opw_kinematics</build_depend>
  <build_export_depend>opw_kinematics</build_export_depend>
  <exec_depend>opw_kinematics</exec_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>tesseract</depend>

  <export>
  </export>
</package>
