<?xml version="1.0"?>
<package format="2">
  <name>descartes_light</name>
  <version>0.3.1</version>
  <description>The descartes_light package</description>
  <author>Jon Meyer</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>libconsole-bridge-dev</depend>
  <depend>eigen</depend>
  <depend>libomp-dev</depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <build_depend>boost</build_depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
