<?xml version="1.0"?>
<package format="2">
  <name>descartes_tesseract</name>
  <version>0.0.0</version>
  <description>The descartes_tesseract package</description>

  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <author email="levi.armstrong@swri.org">Levi Armstrong</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>descartes_light</depend>
  <depend>tesseract_core</depend>
</package>
